--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -108,6 +108,7 @@ http://www.templatemo.com/tm-509-hydro
   }
   .subHeading{
     color: #fff;
+    padding-bottom: 2rem;
   }
   .section-btn {
     background: #ce3232;
@@ -132,9 +133,10 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .overlay {
-    background: #00F260;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #0e0e1e;
+    /* background: #00F260;  fallback for old browsers */
+    /* background: -webkit-linear-gradient(to right, #0575E6, #00F260);  Chrome 10-25, Safari 5.1-6
+    background: linear-gradient(to right, #0575E6, #00F260); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     opacity: 0.7;
     position: absolute;
     width: 100%;
@@ -150,7 +152,10 @@ http://www.templatemo.com/tm-509-hydro
     text-align: center;
   }
 
-
+  /* UTILITIES */
+  .pb-l{
+    padding-bottom: 10rem;
+  }
   /*---------------------------------------
        PRE LOADER              
   -----------------------------------------*/
@@ -1045,9 +1050,12 @@ http://www.templatemo.com/tm-509-hydro
   @media screen and (max-width: 639px) {
 
     h1 {
-      font-size: 2em;
+      font-size: 2.4em;
     }
 
+    .subHeading{
+      padding-bottom: 5rem;
+    }
     .media.blog-thumb .media-left {
       height: 320px;
     }
