edited the slideshow section

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -487,7 +487,9 @@ http://www.templatemo.com/tm-509-hydro
     opacity: 1;
   }
 
-
+.img-responsive{
+    height: auto !important;
+}
 
   /*---------------------------------------
       BLOG             
